<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calc.ExtendedCalcActivity">


    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintBottom_toTopOf="@+id/display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/equationDisplay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:text=""
            app:layout_constraintBottom_toTopOf="@+id/display"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </ScrollView>

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="right|center_vertical"
        android:text=""
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollable" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1142"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="1.5dp"
            android:onClick="clearNumber"
            android:text="@string/clearClearEverythingButton" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="1.5dp"
            android:text="@string/clearAllButton"
            android:onClick="clearAll"/>

        <Button
            android:id="@+id/button37"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="1.5dp"
            android:text="@string/backButton"
            android:onClick="clearLast"/>

        <Button
            android:id="@+id/button38"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="1.5dp"
            android:text="@string/toggleSignButton"
            android:onClick="toggleSign"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1142"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button222"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="1.5dp"
            android:tag="sin"
            android:onClick="insertOperator"
            android:text="sin" />

        <Button
            android:id="@+id/button223"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="1.5dp"
            android:layout_marginEnd="1.5dp"
            android:tag="cos"
            android:onClick="insertOperator"
            android:text="cos" />

        <Button
            android:id="@+id/button214"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="1.5dp"
            android:layout_marginEnd="1.5dp"
            android:tag="tan"
            android:onClick="insertOperator"
            android:text="tan" />

        <Button
            android:id="@+id/button246"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="1.5dp"
            android:tag="sqrt"
            android:onClick="insertOperator"
            android:text="sqrt" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1142"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button292"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="1.5dp"
            android:tag="ln"
            android:onClick="insertOperator"
            android:text="ln" />

        <Button
            android:id="@+id/button228"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="1.5dp"
            android:layout_marginEnd="1.5dp"
            android:tag="log"
            android:onClick="insertOperator"
            android:text="log" />

        <Button
            android:id="@+id/button234"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="1.5dp"
            android:layout_marginEnd="1.5dp"
            android:tag="^"
            android:onClick="insertOperator"
            android:text="x^y" />

        <Button
            android:id="@+id/button256"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="1.5dp"
            android:tag="%"
            android:onClick="insertOperator"
            android:text="%" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1142"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="1.5dp"
            android:tag="1"
            android:onClick="insertNumber"
            android:text="@string/digitOneButton" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="1.5dp"
            android:layout_marginEnd="1.5dp"
            android:tag="2"
            android:onClick="insertNumber"
            android:text="@string/digitTwoButton" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="1.5dp"
            android:layout_marginEnd="1.5dp"
            android:tag="3"
            android:onClick="insertNumber"
            android:text="@string/digitThreeButton" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="1.5dp"
            android:tag="+"
            android:onClick="insertOperator"
            android:text="@string/operatorPlusButton" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1142"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="1.5dp"
            android:tag="4"
            android:onClick="insertNumber"
            android:text="@string/digitFourButton" />

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="1.5dp"
            android:layout_marginEnd="1.5dp"
            android:tag="5"
            android:onClick="insertNumber"
            android:text="@string/digitFiveButton" />

        <Button
            android:id="@+id/button16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="1.5dp"
            android:layout_marginEnd="1.5dp"
            android:tag="6"
            android:onClick="insertNumber"
            android:text="@string/digitSixButton" />

        <Button
            android:id="@+id/button17"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="1.5dp"
            android:tag="-"
            android:onClick="insertOperator"
            android:text="@string/operatorMinusButton" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1142"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button18"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="1.5dp"
            android:tag="7"
            android:onClick="insertNumber"
            android:text="@string/digitSevenButton" />

        <Button
            android:id="@+id/button19"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="1.5dp"
            android:layout_marginEnd="1.5dp"
            android:tag="8"
            android:onClick="insertNumber"
            android:text="@string/digitEightButton" />

        <Button
            android:id="@+id/button20"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="1.5dp"
            android:layout_marginEnd="1.5dp"
            android:tag="9"
            android:onClick="insertNumber"
            android:text="@string/digitNineButton" />

        <Button
            android:id="@+id/button25"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="1.5dp"
            android:tag="*"
            android:onClick="insertOperator"
            android:text="@string/operatorMultiplyButton" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1142"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button22"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="1.5dp"
            android:tag="0"
            android:onClick="insertNumber"
            android:text="@string/digitZeroButton" />

        <Button
            android:id="@+id/button23"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="1.5dp"
            android:layout_marginEnd="1.5dp"
            android:tag="."
            android:onClick="insertNumber"
            android:text="@string/digitPointButton" />

        <Button
            android:id="@+id/button21"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="1.5dp"
            android:layout_marginEnd="1.5dp"
            android:tag="/"
            android:onClick="insertOperator"
            android:text="@string/operatorDivisionButton" />

        <Button
            android:id="@+id/button24"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="1.5dp"
            android:tag="="
            android:onClick="evaluate"
            android:text="@string/evaluateButton" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>